<resources>
    <string name="app_name">ChatApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="loading">Triangulating.\n Please Wait</string>
    <string name="username">Username</string>
    <string name="user_email">User Email</string>
    <string name="theirName">Name</string>
    <string name="logout">Logout</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_request">Cancel Request</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="failed_to_fetch_friends">Failed to fetch friends : %l$s</string>
    <string name="empty_requests_list">Friend requests will appear here</string>
    <string name="empty_friends_list">Freinds list will appear here</string>
    =======
    <string name="change_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_password">Confirm Password</string>
    <string name="Change_Password">Change Password</string>
    <string name="changepassword">Confirm password</string>
    <string name="password_mismatch">password mismatch</string>
    <string name="password_change_successfully">Password Change Successfully</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="request_sent_successfully">Request Sent Succesfully</string>
    <string name="failed_to_send_request">Failed to send request : %1$s</string>
    <string name="request_cancelled_successfully">Request Cancelled Successfully</string>
    <string name="failed_to_cancel_request">Failed to cancel request : %1$s</string>
    <string name="failed_to_update_profile">Failed to updateProfile : %1$s</string>
    <string name="permission_required">Access permission is required</string>
    <string name="save_Profile">Save</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="photo_removed_successfully">Photo remove successfully</string>
    <string name="enter_name">Enter Name</string>
    <string name="Failed_to_update_profile">Failed to update profile</string>
    <string name="failed_to_update_profle">Failed to update profile : %1$s</string>
    <string name="profile_updated_secussfully">Profile Updated Sucessfuly</string>
    >>>>>>> Stashed changes
</resources>