<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    tools:context=".ProfileActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabBarProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="TODO"
            android:onClick="changeImage"

            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="32dp"
            />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="Be someone else with a new username!"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/theirName"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Or have a new email...?"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:onClick="btnSaveClick"
            android:text="@string/save_Profile" />

        <Button
            android:id="@+id/btnResestPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnChangePassword"
            android:text="@string/Reset_Password"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="578dp" />


        <Button
            android:id="@+id/btnlogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="#F80202"

            android:onClick="btnLogoutclick"
            android:text="@string/logout"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="504dp" />
        <!--        android:background="@android:color/holo_red_dark"-->
    </LinearLayout>

</RelativeLayout>